--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
     "helmet": "^4.5.0",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "maskdata": "^1.1.4",
     "mongoose": "^5.12.1",
     "mongoose-unique-validator": "^2.0.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "password-validator": "^5.1.1",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
