--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
+    "express-validator": "^6.10.1",
     "helmet": "^4.5.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
